--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">充电工坊</string>
+    <string name="app_name">Charging workshop</string>
     <string name="charge_task">charge_task</string>
     <string name="charge_service">charge_service</string>
     <string name="charge_foreground_service">charge_foreground_service</string>
@@ -16,32 +16,32 @@
     <string name="audio_flags">audio_flags</string>
     <string name="b_url">https://space.bilibili.com/12845795</string>
     <string name="github_url">https://github.com/RyensX/ChargingWorkshop</string>
-    <string name="start_use_text">开始使用</string>
-    <string name="sound_list">音频列表</string>
+    <string name="start_use_text">Start using</string>
+    <string name="sound_list">Audio List</string>
 
     <string name="video_res_path_format">
         \n
-        普通充电：\n
+        Normal Charging:\n
         %s
         \n
-        快速充电：\n
+        Fast Charging:\n
         %s
     </string>
 
     <string name="audio_setting_help">
-        目前音频支持在五种状态下播放\n
-        分别是：\n
-        1.低电量:0-20%电量\n
-        2.中电量:21-70%电量\n
-        3.高电量:71-99%电量\n
-        4.充满:100%(充满后会一直播放语音，应该没人想要充满了还一直插着吧..？)\n
-        5.拔出\n
-        其他提示:\n
-        1.点击音频可以弹出相应菜单，添加不同状态的Flag可以让它在不同状态下被播放。\n
-        2.一个音频支持设置多个Flag，一个状态存在多个音频则随机抽取一个播放。\n
-        3.当已有Flag时重复设置则清除该Flag\n
+        Currently, audio playback is supported in five states:\n
+        They are:\n
+        1. Low Battery: 0-20% battery\n
+        2. Medium Battery: 21-70% battery\n
+        3. High Battery: 71-99% battery\n
+        4. Full: 100% (Audio will keep playing after being fully charged, I guess nobody wants to keep it plugged in after it's full?)\n
+        5. Unplugged\n
+        Other tips:\n
+        1. Clicking on an audio will pop up a corresponding menu, allowing you to add Flags for different states so that it can be played in different states.\n
+        2. An audio supports setting multiple Flags, and if a state has multiple audios, one will be randomly selected to play.\n
+        3. If a Flag already exists, setting it again will clear that Flag.\n
     </string>
     <string name="per_desc">
-        以上需要自行授权的权限在不同系统上有不同表示。如果在运行过程中发现不能非应用或锁屏界面显示很可能就是系统上有特殊权限限制了，需要自行找到对应权限授权。
+        The permissions that need to be granted manually above are represented differently on different systems. If you find that the application cannot display outside of the app or on the lock screen during operation, it is likely that there are special permission restrictions on the system, and you need to find the corresponding permission and grant it yourself.
     </string>
 </resources>
